--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <link rel="stylesheet" href="./index.css">
+    <title>Life on the Ponyhof</title>
+  </head>
+  
+  <body>
+    This is not a blog!
+  </body>
+  
+</html>
