--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   
   <body>
-    This is not a blog!
+    <p>This is not a blog!</p>
+    <img src="assets/Logo_White Background.png">
   </body>
   
 </html>
