--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
   <head>
     <link rel="stylesheet" href="./index.css">
     <title>Life on the Ponyhof</title>
-    <img src="assets/Logo_White Background.png">
   </head>
   
   <body>
+    <div id="header">
+      <img src="assets/Logo_White Background.png">
+    <div>
     <p>This is not a blog!</p>
     
   </body>
