--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
     <div id="header">
-      <img class="logo" src="assets/Logo_White Background.png">
+      <img src="assets/Logo_White Background.png">
     <div>
     <p>This is not a blog!</p>
     
