--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
   <body>
     <div id="header">
       <img class="logo" src="assets/Logo_White Background.png">
-    <div>
-    <p>This is not a blog!</p>
-    
+    </div>
+   <div id="Birte">
+    <h1>Person Number 1<h1>
+      <p>hygge fan, cello enthusiast, part-time alcoholic</p>
+    </div>
+    <div id="Ben">
+    <h1>Person Number 2<h1>
+      <p>full-time druggie, prostitute-lite, human puddle</p>
+    </div>
+    <div id="Nicki">
+    <h1>Person Number 2<h1>
+      <p>yoga poker, llama whisperer, latte macchiato addict</p>
+    </div>
   </body>
   
 </html>
