--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
       <img class="logo" src="assets/Logo_White Background.png">
     </div>
    <div id="Birte">
-    <h1>Person Number 1<h1>
+    <h1>Person Number 1</h1>
       <p>hygge fan, cello enthusiast, part-time alcoholic</p>
     </div>
     <div id="Ben">
-    <h1>Person Number 2<h1>
+    <h1>Person Number 2</h1>
       <p>full-time druggie, prostitute-lite, human puddle</p>
     </div>
     <div id="Nicki">
-    <h1>Person Number 2<h1>
+    <h1>Person Number 2</h1>
       <p>yoga poker, llama whisperer, latte macchiato addict</p>
     </div>
   </body>
