--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <div id="header">
       <img class="logo" src="assets/Logo_White Background.png">
     </div>
-   <div id="Birte">
+   <div class="Birte">
     <h1>Person Number 1</h1>
       <p>hygge fan, cello enthusiast, part-time alcoholic</p>
     </div>
-    <div id="Ben">
+    <div class="Ben">
     <h1>Person Number 2</h1>
       <p>full-time druggie, prostitute-lite, human puddle</p>
     </div>
-    <div id="Nicki">
+    <div class="Nicki">
     <h1>Person Number 2</h1>
       <p>yoga poker, llama whisperer, latte macchiato addict</p>
     </div>
