--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     </div>
    
     <div class="birte">
-      <h1>Person Number 1</h1>
+      <h1 class="title">Person Number 1</h1>
       <p>hygge fan, cello enthusiast, part-time alcoholic</p>
     </div>
     
     <div class="ben">
-      <h1>Person Number 2</h1>
+      <h1 class="title">Person Number 2</h1>
       <p>full-time druggie, prostitute-lite, human puddle</p>
     </div>
     
     <div class="nicki">
-      <h1>Person Number 2</h1>
+      <h1 class="title">Person Number 2</h1>
       <p>yoga poker, llama whisperer, latte macchiato addict</p>
     </div>
   </body>
