--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <img class="logo" src="assets/Logo_White Background.png">
     </div>
    
+    <div>
     <div class="birte">
       <h1 class="title">Person Number 1</h1>
       <p>hygge fan, cello enthusiast, part-time alcoholic</p>
@@ -23,6 +24,7 @@
     <div class="nicki">
       <h1 class="title">Person Number 3</h1>
       <p>yoga poker, llama whisperer, latte macchiato addict</p>
+    </div>
     </div>
   </body>
   
