--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="box">
       <h1 class="title">Person Number 1</h1>
-      <p>hygge fan, cello enthusiast, part-time alcoholic</p>
+      <p>hygge fan, cello enthusiast, part-time alcoholic, test, test, test</p>
     </div>
     
     <div class="box">
