--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="box">
       <h1 class="title">Person Number 1</h1>
-      <p>hygge fan, cello enthusiast, part-time alcoholic<br></p>
+      <p>hygge fan, cello enthusiast, part-time </br>alcoholic</p>
       <img class="logo" src="assets/Birte.png">
     </div>
     
