--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <div class="box">
       <h1 class="title">Person Number 1</h1>
       <p>hygge fan, cello enthusiast, part-time </br>alcoholic</p>
-      <img class="logo" src="assets/Birte.png">
+      <img src="assets/Birte.png">
     </div>
     
     <div class="box">
       <h1 class="title">Person Number 2</h1>
       <p>full-time druggie, prostitute-lite, human puddle</p>
-      <img class="logo" src="assets/Ben.png">
+      <img src="assets/Ben.png">
     </div>
     
     <div class="box">
       <h1 class="title">Person Number 3</h1>
       <p>yoga poker, llama whisperer, latte macchiato addict</p>
-      <img class="logo" src="assets/Nicki.png">
+      <img src="assets/Nicki.png">
     </div>
   </body>
   
