--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="characterboard">
       <div class="box">
         <h1 class="title">Person Number 1</h1>
-        <p>hygge fan, cello enthusiast, part-time </br>alcoholic</p>
+        <p>hygge fan, cello enthusiast, part-time alcoholic</p>
         <img src="assets/Birte.png">
       </div>
     
