--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     </div> 
 
     <div id="characterboard">
-      <div class="box">
+      <div class="box birte">
         <h1 class="title">Person Number 1</h1>
-        <p>hygge fan, cello enthusiast, part-time alcoholic</p>
+        <p>hygge fan, cello enthusiast, part-time </br>alcoholic</p>
         <img src="assets/Birte.png">
       </div>
     
-      <div class="box">
+      <div class="box ben">
         <h1 class="title">Person Number 2</h1>
         <p>full-time druggie, prostitute-lite, human puddle</p>
         <img src="assets/Ben.png">
       </div>
     
-      <div class="box">
+      <div class="box nicki">
         <h1 class="title">Person Number 3</h1>
         <p>yoga poker, llama whisperer, latte macchiato addict</p>
         <img src="assets/Nicki.png">
